# ID2223-project

./: .env.example  .gitattributes  .gitignore  README.md  phishing-links-ACTIVE.txt  pyproject.toml
.github/workflows/: scheduled_data_pipeline.yml  test.yml  train_model.yml
HF_app/: README.md  app.py  pyproject.toml
docs/: _config.yml  index.md  sample_urlscan_result.json  urlscan_api.md
examples/: extract_legitimate_urls.py  extract_urls_from_sitemaps.py  load_legitimate_urls_example.py  load_phishing_urls_example.py  upload_to_hopsworks.py  urlscan_example.py
src/phising_detection/: __init__.py
src/phising_detection/api/: __init__.py  urlscan.py
src/phising_detection/data/: __init__.py  extract_urls.py  legitimate-urls.txt  load_data.py  load_legit_domains.py  load_phishing_urls.py  seperate_domain_urls.py  sitemap_parser.py  top-1m.csv
src/phising_detection/data/data_files/: legitimate-urls-extracted.csv  legitimate-urls-extracted.txt  phishing-links-ACTIVE.txt
src/phising_detection/features/: __init__.py  batch_url_scanner.py  feature_pipeline.py  urlscan_features.py
src/phising_detection/inference/: __init__.py  pipeline.py
src/phising_detection/models/: __init__.py  best_model_test_results.csv  model_comparison_validation.csv  model_selection.py  train_final_model.py
src/phising_detection/utils/: hopsworks_utils.py
temporary_examples/: extract_urls_from_sitemaps.py  transform_legit_urls_to_hopsworks.py
tests/: __init__.py  conftest.py  test_inference_pipeline.py  test_load_data.py  test_sitemap_parser.py  test_urlscan.py
(+5 files in other folders)
