[project]
name = "phising-detection"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    "confluent-kafka>=2.3.0",
    "hopsworks==4.2.*",
    "pandas>=2.1.0,<2.2.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
]

[tool.uv.workspace]
members = [
    "HF_app",
]

