[project]
name = "hf-app"
version = "0.1.0"
description = "Hugging Face Gradio app for phishing detection using URLScan.io and Hopsworks"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "phising-detection",
    "gradio>=5.0.0",
    "hopsworks==4.2.*",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
]

[tool.uv.sources]
phising-detection = { workspace = true }
